add bcrypt as dependency

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "db:reset": "node ./db/reset.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
