--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "dotenv": "^12.0.3",
