--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "socket.io-client": "^2.3.0",
+    "use-image": "^1.0.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
