--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "socket.io-client": "^2.3.0",
     "use-image": "^1.0.8",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
