--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-konva": "*",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "socket.io-client": "^2.3.0",
