--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-konva": "*",
     "react-konva-utils": "0.2.0",
     "react-router-dom": "^6.2.1",
