--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "font-awesome": "^4.7.0",
     "morgan": "~1.9.1",
     "pg": "^8.7.1",
     "pg-native": "^3.0.0",
