--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "konva": "^8.3.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
