--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-konva-utils": "0.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.0",
     "socket.io-client": "^2.3.0",
     "use-image": "^1.0.8",
     "uuid": "^8.3.2",
