--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "konva": "^8.3.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-konva": "*",
     "react-konva-utils": "0.2.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.0",
     "socket.io-client": "^2.3.0",
     "use-image": "^1.0.8",
     "uuid": "^8.3.2",
