--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "proxy": "http://localhost:8001",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +18,7 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-canvas-confetti": "^1.2.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
